password-generator/styles.css
@-webkit-keyframes list-load {
  from {
    opacity: 0%;
    line-height: 0;
    padding: 0 1em;
    transform: translateX(150%);
  }
  to {
    opacity: 100%;
    line-height: 1.2;
    padding: 0.5em 1em;
    transform: translateX(0%);
  }
}
@keyframes list-load {
  from {
    opacity: 0%;
    line-height: 0;
    padding: 0 1em;
    transform: translateX(150%);
  }
  to {
    opacity: 100%;
    line-height: 1.2;
    padding: 0.5em 1em;
    transform: translateX(0%);
  }
}
@-webkit-keyframes list-unload {
  from {
    opacity: 100%;
    line-height: 1.2;
    transform: translateX(0%);
  }
  to {
    opacity: 0%;
    line-height: 1.2;
    transform: translateX(-150%);
  }
}
@keyframes list-unload {
  from {
    opacity: 100%;
    line-height: 1.2;
    transform: translateX(0%);
  }
  to {
    opacity: 0%;
    line-height: 1.2;
    transform: translateX(-150%);
  }
}
@-webkit-keyframes password-generation {
  from {
    letter-spacing: -0.5em;
  }
  to {
    letter-spacing: 0em;
  }
}
@keyframes password-generation {
  from {
    letter-spacing: -0.5em;
  }
  to {
    letter-spacing: 0em;
  }
}
@-webkit-keyframes alert-enter {
  from {
    opacity: 0%;
    transform: translateY(100%);
  }
  to {
    opacity: 100%;
    transform: translateY(0%);
  }
}
@keyframes alert-enter {
  from {
    opacity: 0%;
    transform: translateY(100%);
  }
  to {
    opacity: 100%;
    transform: translateY(0%);
  }
}
@-webkit-keyframes alert-leave {
  from {
    opacity: 100%;
  }
  to {
    opacity: 0%;
  }
}
@keyframes alert-leave {
  from {
    opacity: 100%;
  }
  to {
    opacity: 0%;
  }
}
:root {
  --clr-light: hsl(0, 0%, 100%);
  --clr-dark: hsl(0, 0%, 5%);
  --font-h1: "Plus Jakarta Sans", sans-serif;
  --font-h2: "Plus Jakarta Sans", sans-serif;
  --font-body: "Plus Jakarta Sans", sans-serif;
  --font-size-body: 1.2em;
}

::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-track {
  background: transparent;
  border-radius: 8px;
}

::-webkit-scrollbar-thumb {
  background: hsla(0deg, 0%, 100%, 0.5);
  border-radius: 8px;
}
::-webkit-scrollbar-thumb:hover {
  background: hsla(0deg, 0%, 100%, 0.75);
}

*, *::before, *::after {
  box-sizing: border-box;
}

html {
  background: linear-gradient(135deg, rgb(40, 50, 141) 0%, rgb(45, 247, 230) 100%);
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2em;
  min-height: 100vh;
  max-width: 100vw;
  margin: 0;
  padding: 0;
  overflow: overlay;
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2em;
}

h1 {
  background-color: hsla(0deg, 0%, 0%, 0.2);
  color: var(--clr-light);
  font-family: var(--font-h1);
  font-size: clamp(24px, 5vw, 32px);
  font-weight: 400;
  text-align: center;
  margin: 0 0.5em;
  padding: 0.5em 1em;
  border-radius: 8px;
  -webkit-backdrop-filter: blur(16px);
          backdrop-filter: blur(16px);
  box-shadow: 0 0 16px 0 hsla(0deg, 0%, 0%, 0.1);
}

h2 {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: hsla(0deg, 0%, 0%, 0);
  color: var(--clr-light);
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  margin: 0;
  padding: 0.5em 1em;
  height: 2.5em;
  word-break: break-all;
  font-family: var(--font-h2);
  font-weight: 400;
}

#generated-password {
  background-color: hsla(0deg, 0%, 0%, 0.1);
  flex-basis: 100%;
  cursor: pointer;
  overflow-y: auto;
  line-height: 1.2;
}

p {
  -webkit-animation: list-load 0.5s forwards;
          animation: list-load 0.5s forwards;
  background-color: hsla(0deg, 0%, 0%, 0.1);
  color: var(--clr-light);
  padding: 0.5em 1em;
  margin: 0;
  font-family: var(--font-body);
  font-size: var(--font-size-body);
  cursor: pointer;
  word-break: break-all;
  border-bottom: 1px solid hsla(0deg, 0%, 100%, 0.2);
  transition-duration: 0.2s;
}
p:hover {
  background-color: hsla(0deg, 0%, 100%, 0.2);
  color: black;
}

form, #password-history-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: clamp(256px, 90vw, 360px);
  height: 540px;
  background-color: hsla(0deg, 0%, 100%, 0.33);
  border-top: 1px solid hsla(0deg, 0%, 100%, 0.33);
  border-left: 1px solid hsla(0deg, 0%, 100%, 0.33);
  border-radius: 8px;
  overflow: hidden;
  -webkit-backdrop-filter: blur(16px) saturate(150%);
          backdrop-filter: blur(16px) saturate(150%);
  box-shadow: 0 0 16px 0 hsla(0deg, 0%, 0%, 0.1);
  scrollbar-color: white transparent;
}

#password-history-container div {
  flex-basis: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}
#password-history-container h2 {
  border-bottom: 1px solid hsla(0deg, 0%, 100%, 0.2);
}

.two-columns {
  display: flex;
  gap: 2em;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid hsla(0deg, 0%, 100%, 0.2);
  padding: 1em 1.5em;
}

label {
  display: block;
  font-family: var(--font-body);
  font-size: var(--font-size-body);
  font-weight: 400;
  color: var(--clr-dark);
}

#length-input-box {
  background-color: hsla(0deg, 0%, 100%, 0.2);
  color: var(--clr-dark);
  border: none;
  border-radius: 4px;
  padding: 4px 0em;
  width: 4ch;
  font-family: var(--font-body);
  font-size: var(--font-size-body);
  font-weight: 400;
  text-align: center;
  transition-duration: 0.2s;
}
#length-input-box:hover {
  background-color: hsla(0deg, 0%, 100%, 0.3);
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
          appearance: none;
  margin: 0;
}

input[type=number] {
  -moz-appearance: textfield;
}

#length-slider {
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
  margin: 0em 1.75em 1em 1.75em;
  height: 0.75em;
  background-color: hsla(0deg, 0%, 100%, 0.2);
  border-radius: 16px;
  transition-duration: 0.2s;
}
#length-slider:hover {
  background-color: hsla(0deg, 0%, 100%, 0.3);
}
#length-slider::-webkit-slider-thumb {
  -webkit-appearance: none;
          appearance: none;
  background-color: hsl(0deg, 0%, 100%);
  border-radius: 16px;
  width: 1.5em;
  height: 1.5em;
  cursor: pointer;
  box-shadow: 0 0 0px 0 hsla(0deg, 0%, 100%, 0);
  transition-duration: 0.2s;
}
#length-slider::-webkit-slider-thumb:hover {
  box-shadow: 0 0 4px 0 hsl(0deg, 0%, 100%);
}
#length-slider::-moz-range-thumb {
  -moz-appearance: none;
       appearance: none;
  background-color: hsl(0deg, 0%, 100%);
  border: none;
  border-radius: 16px;
  width: 20px;
  height: 20px;
  cursor: pointer;
  box-shadow: 0 0 0px 0 hsla(0deg, 0%, 0%, 0);
  transition-duration: 0.2s;
}
#length-slider::-moz-range-thumb:hover {
  box-shadow: 0 0 4px 0 hsl(0deg, 0%, 100%);
}

input[type=checkbox] {
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
  background-color: hsla(0deg, 0%, 100%, 0);
  min-height: 1.5em;
  min-width: 1.5em;
  cursor: pointer;
  border: 2px solid hsla(0deg, 0%, 100%, 0.8);
  border-radius: 4px;
  transition-duration: 0.2s;
}
input[type=checkbox]:checked {
  background-color: hsl(0deg, 0%, 100%);
}

button {
  background-color: hsla(0deg, 0%, 100%, 0.25);
  color: var(--clr-dark);
  min-height: 3em;
  font-family: var(--font-body);
  font-size: var(--font-size-body);
  font-weight: 500;
  border-radius: 8px;
  border: none;
  border-top: 1px solid hsla(0deg, 0%, 100%, 0.33);
  cursor: pointer;
  box-shadow: 0 -4px 32px -8px hsla(0deg, 0%, 0%, 0.25);
  transition-duration: 0.2s;
}
button:hover {
  background-color: hsla(0deg, 0%, 100%, 0.5);
}

.alert {
  position: fixed;
  -webkit-animation: alert-enter 0.5s forwards;
          animation: alert-enter 0.5s forwards;
  bottom: 5%;
  padding: 0.5em 1em;
  background-color: hsla(0deg, 0%, 0%, 0.5);
  color: var(--clr-light);
  font-family: var(--font-body);
  font-size: var(--font-size-body);
  border-radius: 8px;
  box-shadow: 0 0 16px 0 hsla(0deg, 0%, 0%, 0.1);
  -webkit-backdrop-filter: blur(16px);
          backdrop-filter: blur(16px);
}

@media screen and (max-width: 800px) {
  body {
    height: auto;
    margin: 2em 0;
  }

  main {
    flex-direction: column;
  }
}/*# sourceMappingURL=styles.css.map */

